Actions
Bug #10772
closedkcf: NULL pointer errors
Start date:
2019-04-14
Due date:
% Done:
100%
Estimated time:
Difficulty:
Medium
Tags:
Gerrit CR:
Description
NULL pointer errors:
In file included from ../../common/sys/param.h:48:0, from ../../common/sys/t_lock.h:38, from ../../common/sys/systm.h:39, from ../../common/crypto/core/kcf_cryptoadm.c:31: ../../common/crypto/core/kcf_cryptoadm.c: In function 'kcf_soft_config_init': ../../common/sys/null.h:32:14: error: initialization makes integer from pointer without a cast [-Werror=int-conversion] #define NULL ((void *)0) ^ ../../common/crypto/core/kcf_cryptoadm.c:162:16: note: in expansion of macro 'NULL' "random", NULL}; ^~~~ ../../common/sys/null.h:32:14: note: (near initialization for 'swrand_mechs[1][0]') #define NULL ((void *)0) ^ ../../common/crypto/core/kcf_cryptoadm.c:162:16: note: in expansion of macro 'NULL' "random", NULL}; ^~~~ In file included from ../../common/sys/crypto/sched_impl.h:48:0, from ../../common/crypto/api/kcf_dual.c:33: ../../common/crypto/api/kcf_dual.c: In function 'crypto_encrypt_mac': ../../common/sys/crypto/ops_impl.h:392:15: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] mops->mo_sid = _sid; \ ^ ../../common/crypto/api/kcf_dual.c:263:5: note: in expansion of macro 'KCF_WRAP_MAC_OPS_PARAMS' KCF_WRAP_MAC_OPS_PARAMS(&(next_req->kr_params), ^~~~~~~~~~~~~~~~~~~~~~~ ../../common/crypto/api/kcf_dual.c: In function 'crypto_mac_decrypt_common': ../../common/sys/crypto/ops_impl.h:428:16: error: assignment makes integer from pointer without a cast [-Werror=int-conversion] cops->dop_sid = _sid; \ ^ ../../common/crypto/api/kcf_dual.c:1214:5: note: in expansion of macro 'KCF_WRAP_DECRYPT_OPS_PARAMS' KCF_WRAP_DECRYPT_OPS_PARAMS( ^~~~~~~~~~~~~~~~~~~~~~~~~~~ cc1: all warnings being treated as errors
Updated by Electric Monk about 3 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit 0f677ac901babf1fada10fcc386de1c3d4d4ecad
commit 0f677ac901babf1fada10fcc386de1c3d4d4ecad Author: Toomas Soome <tsoome@me.com> Date: 2019-04-24T06:44:19.000Z 10772 kcf: NULL pointer errors Reviewed by: Andy Stormont <astormont@racktopsystems.com> Reviewed by: Robert Mustacchi <rm@joyent.com> Approved by: Dan McDonald <danmcd@joyent.com>
Actions